force-app/main/default/objects/mcdm_15__Bulk_Send_Job__c/mcdm_15__Bulk_Send_Job__c.object-meta.xml
<CustomObject>
    <label>Bulk Send Job</label>
    <nameField>
        <displayFormat>DMBSJ-{00000}</displayFormat>
        <label>Bulk Send Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Send Jobs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>