force-app/main/default/objects/mcdm_15__Bulk_Send_Job__c/fields/mcdm_15__Actionable_List_Id__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Actionable_List_Id__c</fullName>
    <description>ID of the Actionable List used in this send</description>
    <label>Actionable List Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>