force-app/main/default/objects/mcdm_15__Bulk_Send_Job__c/fields/mcdm_15__Batch_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Batch_Job_Id__c</fullName>
    <description>The associated batch apex job ID that prepared the bulk send audience.</description>
    <label>Batch Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>