force-app/main/default/objects/mcdm_15__Bulk_Send_Job__c/fields/mcdm_15__Campaign__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated campaign that this job was created from.</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Bulk Send Jobs</relationshipLabel>
    <relationshipName>Bulk_Send_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>