force-app/main/default/objects/mcdm_15__Bulk_Send_Job__c/fields/mcdm_15__Campaign_Member_States_Updated__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Campaign_Member_States_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean that is true when Campaign Member Journey Approval States are updated after a campaign bulk send has completed.</description>
    <label>Campaign Member States Updated</label>
    <type>Checkbox</type>
</CustomField>