force-app/main/default/objects/mcdm_15__Bulk_Send_Job__c/fields/mcdm_15__Chunk_Error_Count__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Chunk_Error_Count__c</fullName>
    <description># of Bulk Send Batches that have errors</description>
    <label>Chunk Error Count</label>
    <summaryFilterItems>
        <field>mcdm_15__Bulk_Send_Batch__c.mcdm_15__Has_Errors__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>mcdm_15__Bulk_Send_Batch__c.mcdm_15__Bulk_Send_Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>