force-app/main/default/objects/mcdm_15__Bulk_Send_Job__c/fields/mcdm_15__Chunks_Approvals__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Chunks_Approvals__c</fullName>
    <description># of Bulk Send Batches that are waiting on approvals</description>
    <label># Chunks Awaiting on Approval</label>
    <summaryFilterItems>
        <field>mcdm_15__Bulk_Send_Batch__c.mcdm_15__Chunk_Status__c</field>
        <operation>equals</operation>
        <value>Awaiting Approval</value>
    </summaryFilterItems>
    <summaryForeignKey>mcdm_15__Bulk_Send_Batch__c.mcdm_15__Bulk_Send_Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>