force-app/main/default/objects/mcdm_15__Bulk_Send_Job__c/fields/mcdm_15__DM_Action_ID__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__DM_Action_ID__c</fullName>
    <description>Unique ID that is the same for an entire DM sending action. Can be used in reports to group DM sends by a sending action.</description>
    <inlineHelpText>DM 送信アクションの一意の ID。レポートでこの ID を使用して DM 送信を送信アクション別にグループ化します。</inlineHelpText>
    <label>DM Action ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>