force-app/main/default/objects/mcdm_15__Bulk_Send_Job__c/fields/mcdm_15__Greeting__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Greeting__c</fullName>
    <description>JSON Greeting map used in bulk send for custom greeting</description>
    <label>Greeting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>