force-app/main/default/objects/mcdm_15__Bulk_Send_Job__c/fields/mcdm_15__Is_Approved__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Is_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is true if this bulk send is approved on approvals.</description>
    <label>Is Approved</label>
    <type>Checkbox</type>
</CustomField>