force-app/main/default/objects/mcdm_15__Bulk_Send_Job__c/fields/mcdm_15__Is_Rejected__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Is_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is true if this bulk send is rejected on approvals.</description>
    <label>Is Rejected</label>
    <type>Checkbox</type>
</CustomField>