force-app/main/default/objects/mcdm_15__Bulk_Send_Job__c/fields/mcdm_15__Is_Sendable__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Is_Sendable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is true if this bulk send is prepared and ready to be sent.</description>
    <label>Is Sendable</label>
    <type>Checkbox</type>
</CustomField>