force-app/main/default/objects/mcdm_15__Bulk_Send_Job__c/fields/mcdm_15__Linked_Business_Unit_Id__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Linked_Business_Unit_Id__c</fullName>
    <description>ID of the linked business unit for this send</description>
    <label>Linked Business Unit Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>