force-app/main/default/objects/mcdm_15__Bulk_Send_Job__c/fields/mcdm_15__Mobile_Custom_Field_Contact__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Mobile_Custom_Field_Contact__c</fullName>
    <description>Custom field for mobile phone for Contact</description>
    <label>Mobile Custom Field for Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>