force-app/main/default/objects/mcdm_15__Bulk_Send_Job__c/fields/mcdm_15__Scheduled_Send_Id__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Scheduled_Send_Id__c</fullName>
    <description>The associated scheduled send ID when bulksend is scheduled.</description>
    <label>Scheduled Send Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>