force-app/main/default/objects/mcdm_15__Bulk_Send_Job__c/fields/mcdm_15__Send_From__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Send_From__c</fullName>
    <description>Send from mapping for use in the bulk send</description>
    <label>Send From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>