force-app/main/default/objects/mcdm_15__Bulk_Send_Job__c/fields/mcdm_15__SendTime__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__SendTime__c</fullName>
    <description>The scheduled date and time of the send if this bulk send is a scheduled one</description>
    <inlineHelpText>スケジュールされた送信日時</inlineHelpText>
    <label>Send Time</label>
    <type>DateTime</type>
</CustomField>