force-app/main/default/objects/mcdm_15__Bulk_Send_Job__c/fields/mcdm_15__Total_Members__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Total_Members__c</fullName>
    <description>Total number of members in this bulk send job across all bulk send batches</description>
    <label># Total Members</label>
    <summarizedField>mcdm_15__Bulk_Send_Batch__c.mcdm_15__Members__c</summarizedField>
    <summaryForeignKey>mcdm_15__Bulk_Send_Batch__c.mcdm_15__Bulk_Send_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>